--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     }
 
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
-
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation  'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'com.google.firebase:firebase-core:17.2.3'
